2018-07-08  Karl Berry  <karl@freefriends.org>

	* tugboat.dtx (\tubmultipleaffil{author,net}): new commands
	to try to avoid repeating affiliation information.
	First simple example: tb122childs-trotter.ltx.
	(\netaddress): make ! escape, [] group chars.

2018-04-29  Karl Berry  <karl@freefriends.org>

	* tugboat.dtx (\iftubtitlerulefullwidth): new conditional.
	(\maketitle): do \hrule width\textwidth if true.
	Made for tb121prod, previous hack in tb120xii-lat.

2017-11-06  Karl Berry  <karl@freefriends.org>

	* Version 2.19.

	* tugboat.dtx (\KOMAScript): add per koma author.
	(\makevmeta, etc.): new option for TUB verbatim.
	* ltubguid.ltx: document these; remove advice about and references
	to ancient packages. Switch from harvardcite to plain.

2017-07-18  Karl Berry  <karl@freefriends.org>

	* tugboat.dtx (\meta): fix for math mode from Lars Hellstrom.

2017-07-15  Karl Berry  <karl@freefriends.org>

	* tugboat.dtx (\CSczabbr): rename from \CSabbr for better naming.

2017-06-11  Karl Berry  <karl@freefriends.org>

	* tugboat.dtx (\@maketitle): \frenchspacing.

2017-03-13  Karl Berry  <karl@freefriends.org>

	* tugboat.dtx: clarify support for author name in footline

	* tugboat.dtx (\@oddfoot): \frenchspacing.
	(\@tubrunninggetauthor): remove, unused.
	(\tubrunningauthor): new macro, defaults to \@author.
	(\@evenfoot): use it.

2016-11-07  Karl Berry  <karl@freefriends.org>

	* tugboat.dtx: release 2016/11/07 v2.18.

	* Makefile (diff): new target.

        * tugboat.dtx (\hfuzz): set to 1pt to match existing practice.

	* tugboat.dtx (\MFB): \kern1pt before book, to match Knuth.
	
(This ChangeLog file public domain.)